--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node src/index.js"
   },
   "author": "techcoderx",
   "license": "MIT",
   "dependencies": {
-    "gun": "^0.2020.520"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "gun": "git+https://github.com/amark/gun.git",
+    "javalon": "^1.0.28",
+    "yargs": "^16.1.0"
   }
 }
