--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "build": "pkg src/index.js --out-path bin"
   },
   "author": "techcoderx",
   "license": "MIT",
@@ -14,5 +15,8 @@
     "gun": "git+https://github.com/amark/gun.git",
     "is-ipfs": "^2.0.0",
     "yargs": "^16.1.0"
+  },
+  "devDependencies": {
+    "pkg": "^4.4.9"
   }
 }
