Revert "add pkg compiler"
This reverts commit 2ffa4ab3942620e307c88a9022c3c0aa2546700a.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "build": "pkg src/index.js --out-path bin"
+    "start": "node src/index.js"
   },
   "author": "techcoderx",
   "license": "MIT",
@@ -15,8 +14,5 @@
     "gun": "git+https://github.com/amark/gun.git",
     "is-ipfs": "^2.0.0",
     "yargs": "^16.1.0"
-  },
-  "devDependencies": {
-    "pkg": "^4.4.9"
   }
 }
