--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "techcoderx",
   "license": "MIT",
   "dependencies": {
+    "@peculiar/webcrypto": "^1.1.7",
     "axios": "^0.23.0",
     "body-parser": "^1.19.0",
     "bs58": "^4.0.1",
