--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "bs58": "^4.0.1",
     "crypto-js": "^4.0.0",
     "express": "^4.17.1",
-    "gun": "github:amark/gun",
+    "gun": "^0.2020.1239",
     "is-ipfs": "^2.0.0",
     "secp256k1": "^4.0.2",
     "text-encoding": "^0.7.0",
