--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.19.0",
     "bs58": "^4.0.1",
     "crypto-js": "^4.0.0",
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "gun": "^0.2020.1239",
     "is-ipfs": "^2.0.0",
