--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Off-chain GunDB database for Alive protocol streams",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "build": "pkg src/index.js --output=dist/alivedb --target=node16"
+    "start": "node src/index.js"
   },
   "author": "techcoderx",
   "license": "MIT",
@@ -22,11 +21,5 @@
     "secp256k1": "^4.0.2",
     "text-encoding": "^0.7.0",
     "yargs": "^16.1.0"
-  },
-  "devDependencies": {
-    "pkg": "^5.3.3"
-  },
-  "pkg": {
-    "scripts": "src/**"
   }
 }
